@@ -1,5 +1,5 @@
 dnl Required initializer
-AC_INIT(mod_log_sql, 1.98)
+AC_INIT(mod_log_sql, 1.99)
 OOO_CONFIG_NICE(config.nice)
 AC_PREREQ(2.53)
 AC_CONFIG_HEADERS(config.h)
@@ -35,7 +35,13 @@ WANT_MYSQL_MOD=1
 AC_SUBST(WANT_MYSQL_MOD)
 WANT_PGSQL_MOD=0
 AC_SUBST(WANT_PGSQL_MOD)
-WANT_DBI_MOD=0
+WANT_DBI_MOD=1
+DBI_LDFLAGS=""
+DBI_LIBS="-ldbi"
+DBI_CFLAGS=""
+AC_SUBST(DBI_LDFLAGS)
+AC_SUBST(DBI_LIBS)
+AC_SUBST(DBI_CFLAGS)
 AC_SUBST(WANT_DBI_MOD)
 
 case "$target" in
